--- a/client-myjss/src/app/modules/my-account/components/user-settings/user-settings.component.html
+++ b/client-myjss/src/app/modules/my-account/components/user-settings/user-settings.component.html
@@ -2,13 +2,13 @@
 
 <div class="d-flex align-items-center mb-4" *ngIf="userScope && userScope.length>1 && currentUser">
   <div class="ms-auto">
-    <div class="btn-group dropdown" style="margin-right: 10px;">
-      <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true"
+    <div ngbDropdown class="btn-group dropdown" style="margin-right: 10px;">
+      <button type="button" class="btn btn-secondary dropdown-toggle" ngbDropdownToggle aria-haspopup="true"
         aria-expanded="false">
         <i class="ai-briefcase me-2"></i>
         {{capitalizeName(currentUser.firstname+ ' '+currentUser.lastname)}}
       </button>
-      <div class="dropdown-menu my-1">
+      <div ngbDropdownMenu class="dropdown-menu my-1">
         <label class=" dropdown-item" *ngFor="let scope of userScope">
           <a class="dropdown-item" style="cursor: pointer;" (click)="changeCurrentUser(scope) ">
             {{capitalizeName(scope.firstname+ ' '+scope.lastname)}}
