--- a/client-myjss/src/app/modules/my-account/components/affaires/affaires.component.html
+++ b/client-myjss/src/app/modules/my-account/components/affaires/affaires.component.html
@@ -4,13 +4,13 @@
     <div style="margin-right: 10px;"><generic-input [(model)]="searchText" label="SIRET / Dénomination"
         [form]="affaireForm" propertyName="searchText" [isMandatory]="false" [isDisabled]="false" icon="search"
         [isDisplayLabel]="false" (onFormChange)="changeFilter()"></generic-input></div>
-    <div class="btn-group dropdown">
-      <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-bs-toggle="dropdown"
-        aria-haspopup="true" aria-expanded="false">
+    <div ngbDropdown class="btn-group dropdown">
+      <button type="button" class="btn btn-outline-secondary dropdown-toggle" ngbDropdownToggle aria-haspopup="true"
+        aria-expanded="false">
         <i class="ai-bar-chart-3 me-2"></i>
         Trier par
       </button>
-      <div class="dropdown-menu my-1">
+      <div ngbDropdownMenu class="dropdown-menu my-1">
         <a class="dropdown-item" style="cursor: pointer;" (click)="changeSort('nameAsc');$event.stopPropagation();">
           <i class="ai-bar-chart-3 me-2"></i>
           Dans l'ordre alphabétique
