--- a/client-myjss/src/app/modules/my-account/components/billing-closure/billing-closure.component.html
+++ b/client-myjss/src/app/modules/my-account/components/billing-closure/billing-closure.component.html
@@ -2,13 +2,13 @@
   <h1 class="h2 mb-3 mb-sm-0">Relevé de compte</h1>
 
   <div class="d-flex flex-column flex-sm-row ms-sm-auto gap-2">
-    <div class="btn-group dropdown">
-      <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-bs-toggle="dropdown"
-        aria-haspopup="true" aria-expanded="false">
+    <div ngbDropdown class="btn-group dropdown">
+      <button type="button" class="btn btn-outline-secondary dropdown-toggle" ngbDropdownToggle aria-haspopup="true"
+        aria-expanded="false">
         <i class="ai-filter me-2"></i>
         Filtrer
       </button>
-      <div class="dropdown-menu my-1">
+      <div ngbDropdownMenu class="dropdown-menu my-1">
         <label class="dropdown-item" *ngFor="let scope of userScope">
           <input class="form-check-input me-2" type="checkbox"
             [(ngModel)]="userScopeSelected[scope.responsableViewed.id]" (change)="changeFilter()">
@@ -22,13 +22,13 @@
       </div>
     </div>
 
-    <div class="btn-group dropdown">
-      <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-bs-toggle="dropdown"
-        aria-haspopup="true" aria-expanded="false">
+    <div ngbDropdown class="btn-group dropdown">
+      <button type="button" class="btn btn-outline-secondary dropdown-toggle" ngbDropdownToggle aria-haspopup="true"
+        aria-expanded="false">
         <i class="ai-bar-chart-3 me-2"></i>
         Trier par
       </button>
-      <div class="dropdown-menu my-1">
+      <div ngbDropdownMenu class="dropdown-menu my-1">
         <a class="dropdown-item" style="cursor: pointer;"
           (click)="changeSort('createdDateAsc');$event.stopPropagation();">
           <i class="ai-time me-2"></i>
@@ -49,13 +49,13 @@
       </div>
     </div>
 
-    <div class="btn-group dropdown">
-      <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-bs-toggle="dropdown"
-        aria-haspopup="true" aria-expanded="false">
+    <div ngbDropdown class="btn-group dropdown">
+      <button type="button" class="btn btn-outline-secondary dropdown-toggle" ngbDropdownToggle aria-haspopup="true"
+        aria-expanded="false">
         <i class="ai-menu me-2"></i>
         Actions
       </button>
-      <div class="dropdown-menu my-1">
+      <div ngbDropdownMenu class="dropdown-menu my-1">
         <a href="#" class="dropdown-item">
           <i class="ai-download me-2"></i>
           Exporter en Excel <!-- TODO -->
