--- a/client-myjss/src/app/modules/my-account/components/quotations/quotations.component.html
+++ b/client-myjss/src/app/modules/my-account/components/quotations/quotations.component.html
@@ -1,13 +1,13 @@
 <div class="d-flex align-items-center mb-4">
   <h1 class="h2 mb-0">Devis</h1>
   <div class="ms-auto">
-    <div class="btn-group dropdown" style="margin-right: 10px;">
-      <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-bs-toggle="dropdown"
-        aria-haspopup="true" aria-expanded="false">
+    <div ngbDropdown class="btn-group dropdown" style="margin-right: 10px;">
+      <button type="button" class="btn btn-outline-secondary dropdown-toggle" ngbDropdownToggle aria-haspopup="true"
+        aria-expanded="false">
         <i class="ai-filter me-2"></i>
         Filtrer
       </button>
-      <div class="dropdown-menu my-1">
+      <div ngbDropdownMenu class="dropdown-menu my-1">
         <label class=" dropdown-item">
           <input class="form-check-input me-2" type="checkbox" value="" [(ngModel)]="statusFilterOpen"
             (change)="changeFilter()">
@@ -45,13 +45,13 @@
         </label>
       </div>
     </div>
-    <div class="btn-group dropdown ">
-      <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-bs-toggle="dropdown"
-        aria-haspopup="true" aria-expanded="false">
+    <div ngbDropdown class="btn-group dropdown ">
+      <button type="button" class="btn btn-outline-secondary dropdown-toggle" ngbDropdownToggle aria-haspopup="true"
+        aria-expanded="false">
         <i class="ai-bar-chart-3 me-2"></i>
         Trier par
       </button>
-      <div class="dropdown-menu my-1">
+      <div ngbDropdownMenu class="dropdown-menu my-1">
         <a class="dropdown-item" style="cursor: pointer;"
           (click)="changeSort('createdDateDesc');$event.stopPropagation();">
           <i class="ai-time me-2"></i>
