--- a/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
+++ b/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
@@ -1,4 +1,5 @@
-<header class="fixed-top jss-navbar" [ngClass]="{'jss-navbar-light': isForQuotationNavbar}">
+<header class="fixed-top jss-navbar "
+  [ngClass]="{'jss-navbar-light': isForQuotationNavbar,'theme-account': isForQuotationNavbar}">
   <div class="container mt-3">
     <div class="row navbar d-flex justify-content-between align-items-center">
 
@@ -48,8 +49,8 @@
           </a>
         </div>
         <!-- User signed in state. Account dropdown on screens > 576px -->
-        <div class="dropdown nav " *ngIf="currentUser && currentUser.id">
-          <a class="d-flex align-items-center p-0 user-account" data-bs-toggle="dropdown" aria-expanded="false">
+        <div ngbDropdown class="dropdown nav " *ngIf="currentUser && currentUser.id">
+          <a ngbDropdownToggle class="d-flex align-items-center p-0 user-account" aria-expanded="false">
             <avatar class="avatar-select" [user]="currentUser" [size]="48"></avatar>
             <div class="ps-2 d-none d-md-block">
               <div class="fs-xs lh-1 opacity-60">Bonjour,</div>
@@ -58,7 +59,7 @@
               </div>
             </div>
           </a>
-          <div class="dropdown-menu dropdown-menu-end my-1">
+          <div ngbDropdownMenu class="dropdown-menu dropdown-menu-end my-1">
             <h6 class="dropdown-header fs-xs fw-medium text-body-secondary text-uppercase pb-1">Mon compte
             </h6>
             <ng-container *ngFor="let item of myAccountItems">
