--- a/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
+++ b/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
@@ -42,13 +42,13 @@
         </div>
         <div class="d-flex align-items-center mb-4" *ngIf="userScope && userScope.length>1 && currentUser">
           <div class="ms-auto">
-            <div class="btn-group dropdown" style="margin-right: 10px;">
-              <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
+            <div ngbDropdown class="btn-group dropdown" style="margin-right: 10px;">
+              <button type="button" class="btn btn-secondary dropdown-toggle" ngbDropdownToggle aria-haspopup="true"
+                aria-expanded="false">
                 <i class="ai-briefcase me-2"></i>
                 {{capitalizeName(currentUser.firstname+ ' '+currentUser.lastname)}}
               </button>
-              <div class="dropdown-menu my-1">
+              <div ngbDropdownMenu class="dropdown-menu my-1">
                 <label class=" dropdown-item" *ngFor="let scope of userScope">
                   <a class="dropdown-item" style="cursor: pointer;" (click)="changeCurrentUser(scope) ">
                     {{capitalizeName(scope.firstname+ ' '+scope.lastname)}}
@@ -169,6 +169,15 @@
       </div>
     </div>
   </form>
+
+  <div
+    class="position-fixed bottom-0 start-0 w-100 bg-light shadow-sm p-3 m-0 mt-3 d-flex justify-content-between align-items-center z-3">
+    <button type="button" class="btn btn-secondary rounded-1 mx-5 d-flex align-items-center"
+      (click)="goBackQuotation()">
+      <i class="ai-arrow-left"></i>
+      <span class="d-none d-sm-inline ms-2">Étape précédente</span>
+    </button>
+  </div>
 </div>
 
 <!-- Tiers form -->
