--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -257,7 +257,8 @@
               <div class="col-md-9">
                 <label for="announcementTextarea" class="form-label">Texte de l'annonce</label>
                 <ckeditor id="announcementTextarea" [editor]="ckEditorHeader" [config]="config"
-                  [data]="announcementNoticeInit" (change)="onNoticeChange($event, provision)">
+                  [data]="provision.announcement.notice &&provision.announcement.notice.length>0 ? provision.announcement.notice : announcementNoticeInit"
+                  (change)="onNoticeChange($event, provision)">
                 </ckeditor>
               </div>
             </div>
