--- a/client/src/app/modules/administration/components/referentials/referential-service/referential-service-type.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-service/referential-service-type.component.html
@@ -164,7 +164,7 @@
               </td>
               <td
                 *ngIf="assoServiceProvisionType.noticeTypeFamily && assoServiceProvisionType.provisionType.provisionFamilyType">
-                <select-notice-template [(model)]="assoServiceProvisionType.noticeTemplate" label="Template"
+                <select-notice-template [(model)]="assoServiceProvisionType.noticeTemplate" label="Modèle d'annonce"
                   [form]="entityForm" [propertyName]="'noticeTemplate'+index+deleteIndex" [isMandatory]="false"
                   [isDisabled]="!editMode"
                   [filteredProvisionFamilyType]="assoServiceProvisionType.provisionType.provisionFamilyType"></select-notice-template>
