--- a/client-jss/src/app/main/components/contribute/contribute.component.html
+++ b/client-jss/src/app/main/components/contribute/contribute.component.html
@@ -16,13 +16,14 @@
               <h3>Mettez votre plume au service de l’info !</h3>
               <img class="rounded-2 mb-2" src="/assets/images/page_contribuer.jpg">
               <h4>Partagez votre regard sur l'actualité</h4>
-              <p>Vous avez une analyse ou une opinion à partager en lien avec l’actualité ?
-                Au JSS, l’information se construit avec vous ! Que vous soyez journaliste indépendant ou spécialiste
+              <p>Vous avez une analyse ou une opinion à partager en lien avec l’actualité ?<br />
+                Au JSS, l’information se construit avec vous ! <br />
+                Que vous soyez journaliste indépendant ou spécialiste
                 d’un sujet qui pourrait intéresser les lecteurs de notre média, nous vous offrons un espace pour
                 exprimer vos idées et enrichir le débat public.</p>
               <h4>Notre ligne éditoriale</h4>
-              <p>Le JSS, c'est un média engagé dans une information libre, rigoureuse et diversifiée.
-                Notre mission : donner la parole à des voix variées pour décrypter l’actualité autrement.
+              <p>Le JSS, c'est un média engagé dans une information libre, rigoureuse et diversifiée.<br />
+                Notre mission : donner la parole à des voix variées pour décrypter l’actualité autrement.<br />
                 Nous privilégions une approche analytique et approfondie, loin des formats courts et sensationnalistes.
               </p>
 
