--- a/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.css
+++ b/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.css
@@ -5,3 +5,12 @@
 .border-top-1 {
   border-top-width: 1px !important;
 }
+
+.accordion {
+  --ar-accordion-border-radius: 0px !important;
+}
+
+.accordion-item {
+  border-radius: 0px;
+  background-color: var(--primary-color);
+}
